# hackathon-2021-summer

./: .editorconfig  .gitignore  README.md  package.json  tsconfig.json
contracts/impls/tokens/aura/: Cargo.toml
contracts/impls/tokens/entity/: Cargo.toml  lib.rs
contracts/me-env/: Cargo.toml
contracts/traits/tokens/erc1155/: lib.rs
docs/: categories.md  technical-resources.md  平行时空参赛项目 契约链.pptx
services/blockchain-substrate-ink/: package.json
services/blockchain-substrate-ink/src/: context.ts  index.ts
services/blockchain-substrate-ink/src/methods/: index.ts
services/storage-ipfs/: .gitignore  package.json
services/storage-ipfs/src/: index.ts
services/storage-ipfs/src/methods/: index.ts
src/: index.ts
src/methods/: index.ts
src/routes/: factory.ts  index.ts
src/routes/v0/: index.ts  nft.ts  platform.ts
src/types/: koa-sendfile.d.ts
teams/: ButterflyTeam  NFT mall
teams/00-团队模板/: README.md
teams/01-Mintcraft/: README.md
teams/01-Mintcraft/src/mintcraft-ink!/: .gitignore  LICENSE  README.md
teams/01-Mintcraft/src/mintcraft-nft-gateway/: .eslintrc  gulpfile.js  package.json  tsconfig.json
teams/01-Mintcraft/src/mintcraft-ue-plugin/: MintCraft.uplugin  README.md
teams/02-DomainKnowledge/: README.md
teams/02-DomainKnowledge/docs/: reference.md
teams/02-DomainKnowledge/src/contracts/: Cargo.toml  lib.rs
teams/02-DomainKnowledge/src/ui/: .gitignore  babel.config.js  package.json  tsconfig.json
teams/02-DomainKnowledge/ui/config/: webpack.production.js
teams/02-DomainKnowledge/ui/src/: App.tsx
teams/03-Scifanchain/: README.md
teams/03-Scifanchain/docs/: mkdocs.yml  readme.md
teams/03-Scifanchain/docs/docs/: CNAME  index.md  成为创作者.md  白皮书.md
teams/03-Scifanchain/docs/site/: 404.html.py  index.html  index.html.py
teams/03-Scifanchain/src/api/: README.md  alembic.ini  main.py
teams/03-Scifanchain/src/docs/: mkdocs.yml  readme.md
teams/03-Scifanchain/src/substrate/: README.md
teams/03-Scifanchain/src/ui/: README.md
teams/04-EternityLabs/: README.md  README_CN.md  README_EN.md
teams/04-EternityLabs/docs/: README.md  README_CN.md  project.md  project_CN.md  prospect.md  prospect_CN.md  team.md  team_CN.md
teams/04-EternityLabs/src/: README.md  README_CN.md
teams/04-EternityLabs/src/eternity-backend-server/: .envrc  .gitignore  README.md  manager.py  pysubstratetest.py  requirements.txt
teams/04-EternityLabs/src/py-analysis/: KDJ.py  README.md  all_index.py  try_index.py
teams/05-Wasmark/: README.md
teams/05-Wasmark/docs/: cli.md  使用流程.md
teams/05-Wasmark/src/cli/: README.md  nodemon.json  package.json  tsconfig.json
teams/05-Wasmark/src/ui/: .gitignore  README.md  package.json  tsconfig.json
teams/06-上海对外经贸战队/: README.md
teams/06-上海对外经贸战队/07-NFT mall/: Readme.md
teams/06-上海对外经贸战队/src/NFT-Parser-0x01/: .eslintrc.js  .gitignore  (+3 more)
teams/07-NFT Mall/: Readme.md
teams/07-NFTMall/: Readme.md
teams/07-NFTMall/docs/: docs.md  readme.md
teams/07-NFTMall/front-end/: front-end.lnk
teams/07-NFTMall/moonbeam-master/: readme.md
teams/08-Butterfly/: README.md
teams/08-Butterfly/docs/: PubComentsChain_ boka.pptx
teams/09-Spicystrips/: README.md
teams/10-ExpanderGraph/: README.md
teams/11-SECC/: README.md
teams/11-SECC/docs/: demo.mp4.md
teams/11-SECC/src/substrate-node-secc/pallets/sign-data/: Cargo.toml
teams/11-SECC/src/substrate-node-secc/pallets/sign-data/src/: lib.rs  mock.rs  tests.rs
teams/12-NFTicket/: README.md
teams/12-NFTicket/src/contract/contracts/: Cargo.toml  build-all.sh  lib.rs
teams/12-NFTicket/src/contract/contracts/meeting/: lib.rs
teams/12-NFTicket/src/contract/contracts/meeting/offline/: Cargo.toml  lib.rs
teams/12-NFTicket/src/contract/contracts/nftmart-contract/: Cargo.toml  Makefile  lib.rs  rustfmt.toml
teams/12-NFTicket/src/contract/contracts/offline/: Cargo.toml  lib.rs
teams/12-NFTicket/src/contract/contracts/offline-template/: Cargo.toml  lib.rs
teams/12-NFTicket/src/contract/contracts/offline-template/meeting/: Cargo.toml
teams/12-NFTicket/src/contract/contracts/offline_template/: Cargo.toml  lib.rs
teams/12-NFTicket/src/contract/contracts/offline_template/offline_meeting/: Cargo.toml  lib.rs
teams/12-NFTicket/src/contract/contracts/online_template/: Cargo.toml  lib.rs
teams/12-NFTicket/src/contract/contracts/online_template/online_meeting/: Cargo.toml  lib.rs
teams/12-NFTicket/src/contract/contracts/primitives/: lib.rs
teams/12-NFTicket/src/contract/contracts/stub/: Cargo.toml  lib.rs
teams/12-NFTicket/src/contract/contracts/template/: Cargo.toml  event.rs  lib.rs
teams/12-NFTicket/src/contract/contracts/template/meeting/: Cargo.toml  lib.rs
teams/12-NFTicket/src/contracts/online/: Cargo.toml  lib.rs
teams/12-NFTicket/src/contracts/online/meeting/: Cargo.toml  lib.rs
teams/13-Playdog/: README.md
teams/14-onepaper/: README.md
teams/14-onepaper/docs/: 视频链接地址.txt
teams/15-CTT-Block-Chain/docs/: Ctt链项目与代码开发简介.docx
teams/16-UdunNetwork/: README.md
teams/16-UdunNetwork/docs/: UdunNetwork-Tech.md
teams/16-UdunNetwork/src/: README.md
teams/17-CraftingFinance/: README.md
teams/17-CraftingFinance/docs/: README.md
teams/17-CraftingFinance/src/contracts/accountbook/: Cargo.toml  lib.rs
teams/17-CraftingFinance/src/contracts/kingsman/: Cargo.toml  lib.rs
teams/18-OAK-Network/: README.md
teams/18-OAK-Network/src/: README.md  package.json
teams/19-LegendsChain/: README.md
teams/20-Web3Pioneer/: README.md
teams/20-Web3Pioneer/src/: README.md
teams/21-seedcloud/: README.md
teams/22-Taoist/: README.md
teams/23-Nutbox/: README.md
teams/23-Nutbox/src/: README.md  package.json  vue.config.js
teams/23-平行时空/: README.md
teams/23-平行时空/docs/: 【契约链】平行时空团队.pptx  平行时空参赛项目 契约链.pptx
teams/24-平行时空/: README.md
teams/25-PNS/: README.md
teams/26-PNS/: README.md
teams/Butterfly/: README.md
teams/CTT-Block-Chain/: README.md
teams/OAK-Network/: README.md
teams/team2-DomainKnowledge/: README.md
teams/team3-EternityLabs/: README.md
tests/contracts/: redspot.config.ts
tests/contracts/tests/: aura.ts
(+1361 files in other folders)
