[package]
name = "aura"
version = "0.1.0"
authors = ["MintEngine Lab <admin@mintcraft.org>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_storage = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_prelude = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }

metis_lang = { version = "0.1.0", git = "https://github.com/patractlabs/metis", default-features = false }
metis_erc20 = { version = "0.1.0", git = "https://github.com/patractlabs/metis", default-features = false }
metis_ownable = { version = "0.1.0", git = "https://github.com/patractlabs/metis", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.6", default-features = false, features = ["derive"], optional = true }

[lib]
name = "aura"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
	# Used for ABI generation.
	"rlib",
]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "metis_lang/std",
    "metis_erc20/std",
    "metis_ownable/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
