[package]
name = "online_template"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_prelude = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_storage = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.6.0", default-features = false, features = ["derive"], optional = true }

meeting = { version = "0.1.0", path = "meeting", default-features = false,features = ["ink-as-dependency"] }
primitives = { version = "0.1.0", path = "../traits/primitives", default-features = false}
nfticket = { version = "0.1.0", path = "../traits/nfticket", default-features = false, features = ["ink-as-dependency"] }
nftmart-contract = { version = "0.1.0", path = "../nftmart-contract", default-features = false, features = ["ink-as-dependency"] }

[lib]
name = "online"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_prelude/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",

    "meeting/std",
    "primitives/std",
    "nfticket/std",
    "nftmart-contract/std",
]
ink-as-dependency = []
