[package]
name = "offline_meeting"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_metadata = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false, features = ["derive"], optional = true }
# ink_env = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false ,features=["ink-debug"]}
ink_env = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_storage = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_lang = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }
ink_prelude = { version = "3.0.0-rc3", git = "https://github.com/paritytech/ink", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.6.0", default-features = false, features = ["derive"], optional = true }

primitives = { version = "0.1.0", path = "../../primitives", default-features = false}
stub = { version = "0.1.0", path = "../../stub", default-features = false, features = ["ink-as-dependency"] }
[lib]
name = "offline_meeting"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib","rlib"
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",
    "primitives/std",
    "stub/std",
]
ink-as-dependency = []
